[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "samba"
version = "0.1.0"
description = "Samba ML project with GPU support"
authors = [
    { name="Your Name", email="you@example.com" }
]
requires-python = ">=3.10"
dependencies = [
    # Core ML
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",

    # HuggingFace & datasets
    "transformers>=4.39.0",
    "datasets>=2.14.0",
    "tokenizers>=0.15.0",

    # mamba-ssm
    "mamba-ssm>=1.0.0",
    "causal-conv1d>=1.0.0",

    # Monitoring
    "wandb>=0.15.0",

    # Development
    "ipython",
    "jupyter",

    # GPU 필수
    "torch==2.5.1+cu124",
    "torchvision",
    "torchaudio",
    "triton>=2.0.0"
]
